plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.2'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.springStudy'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-web-services'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    // jpa
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'

    // jwt
    // implementation 'com.auth0:java-jwt:3.12.0'

    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    implementation 'io.jsonwebtoken:jjwt-gson:0.12.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.5'

    // hashing
    //implementation 'org.springframework.security:spring-security-core:5.8.3'

    // swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

    //security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // mysql
    implementation 'com.mysql:mysql-connector-j:8.0.31'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'mysql:mysql-connector-java:8.0.28'

    //email
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    //redis 추가
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    //spring AI
    //implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter:1.0.0-SNAPSHOT'
    implementation 'org.springframework.boot:spring-boot-starter-freemarker'
    implementation 'com.google.firebase:firebase-admin:9.2.0'

    //OPEN AI
    implementation 'io.github.flashvayne:chatgpt-spring-boot-starter:1.0.4'
    implementation 'org.springframework.boot:spring-boot-starter-tomcat'

    //env읽기
    implementation 'io.github.cdimascio:dotenv-java:2.2.4'
}

tasks.named('test') {
    useJUnitPlatform()
}
